--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 # File: _config.yml
-title: "Khanh Linh Nguyen"
+title: "Khanh Linh Nguyen's Portfolio"
 author: "Khanh Linh Nguyen"
 description: "AI/ML Expert & Tech Community Leader"
 url: "https://linhkid.github.io"
