add education logo

--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 # File: _config.yml
-title: "Khanh Linh Nguyen's Portfolio"
-author: "Khanh Linh Nguyen"
+title: "Thank you for visiting my site!"
+author: "Copyright © 2025 Khanh Linh Nguyen"
 description: "AI/ML Expert & Tech Community Leader"
 url: "https://linhkid.github.io"
 baseurl: ""
