--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 # File: _config.yml
-title: "Thank you for visiting my site!"
+title: "Linh (Kid) Nguyen's Portfolio"
 author: "Copyright © 2025 Khanh Linh Nguyen"
 description: "AI/ML Expert & Tech Community Leader"
 url: "https://linhkid.github.io"
